# agent-passport-protected-actions

./: .gitignore  BUGS_AND_DOC_GAPS.md  BUGS_AND_DOC_GAPS_RULE_COMPLIANT_APPENDIX_20260615T191349Z.md  CHALLENGE_RULES_EXTRACT.md  DEVREL_REPORT.md  EVIDENCE_MANIFEST.md  JUDGE_WALKTHROUGH_90S.md  README.md  SUBMISSION_FORM_FIELDS.md  SUBMISSION_PACKET.md  T3_BOUNTY_CRITERIA_RESCAN_20260615T170958Z.md  T3_BOUNTY_MAX_COUNCIL_PACKET_20260615T171622Z.md  T3_BOUNTY_MAX_COUNCIL_SYNTHESIS_20260615T172133Z.md  T3_BOUNTY_MAX_FINAL_REVIEW_PACKET_20260615T1750Z.md  T3_BUILD_SUBMISSION_COUNCIL_JUDGMENT_PACKET_20260615T203639Z.md  T3_BUILD_SUBMISSION_COUNCIL_JUDGMENT_SYNTHESIS_20260615T2047Z.md  T3_CLEAN_HANDOFF_READINESS_20260615T2025Z.md  T3_PLACEHOLDER_EGRESS_ACCEPTANCE_GATE_20260615T172133Z.md  T3_POST_SDK_BREADTH_COUNCIL_AUDIT_PACKET_20260615T194334Z.md  T3_POST_SDK_BREADTH_COUNCIL_AUDIT_SYNTHESIS_20260615T2001Z.md  T3_RULES_ALL_LINKS_RESCAN_20260615T191349Z.md  T3_RULES_PATCH_FINAL_COUNCIL_PACKET_20260616T1810Z.md  T3_RULES_PATCH_FINAL_COUNCIL_SYNTHESIS_20260616T1812Z.md  T3_SAFE_EGRESS_IMPLEMENTATION_RECEIPT_20260615T173947Z.md  T3_SDK_BREADTH_IMPLEMENTATION_RECEIPT_20260615T192705Z.md
agent-passport-protected-actions/: .env.example  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
agent-passport-protected-actions/src/: t3n.ts  (+13 more)
repos/z-audit-probe/: Cargo.toml
repos/z-audit-probe/src/: lib.rs
repos/z-audit-probe/wit/: world.wit
repos/z-safe-egress-demo/: Cargo.toml
repos/z-safe-egress-demo/src/: lib.rs
repos/z-safe-egress-demo/wit/: world.wit
(+72 files in other folders)
