[package]
name = "z-audit-probe"
version = "0.1.0"
edition = "2021"
description = "Minimal Terminal 3 tenant contract that emits one no-PII audit event for Agent Passport build-track verification"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
wit-bindgen = { version = "0.49", default-features = false, features = ["macros", "realloc"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[features]
default = ["emit-audit"]
emit-audit = []

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
