[package]
name = "z-safe-egress-demo"
version = "0.1.0"
edition = "2021"
description = "Minimal Terminal 3 z-tenant contract for no-money/no-raw-PII http-with-placeholders egress proof"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
wit-bindgen = { version = "0.49", default-features = false, features = ["macros", "realloc"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[features]
default = ["emit-audit"]
emit-audit = []

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
